[workspace.package]
version = "0.2.0"
authors = ["Sascha"]
description = "A stress test for PyTorch CPU and GPU"
homepage = "https://github.com/sascharo/rust-pytorch"

[workspace]
members = [
    "stress-test"
]
default-members = [
    "stress-test"
]
# exclude = []
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = true

[profile.size-optimized-aggressive]
inherits = "release-lto"
opt-level = "z"

[profile.test]
inherits = "release-lto"
