[package]
name = "stress-test"
version = "0.2.0"
edition = "2021"
homepage.workspace = true

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
rayon = "1.10"
tch = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.test]
opt-level = 3
