[package]
name = "stress-test"
version = "0.2.0"
edition = "2021"
build = "build.rs"
homepage.workspace = true

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
rayon = "1.10"
tch = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1"

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
